$Id: History,v 1.34 2002-05-30 13:01:44 dressel Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May   30, 2002  M.Dressel 
--------------------------------------------------------
- all the ImportanceScoreManagers derive form 
  G4VImportanceScoreConstructor 

May   30, 2002  M.Dressel internal-3-transport-V04-00-05
--------------------------------------------------------
- changes in Importance Manager constructors, G4ImportanceAlgorithm as 
  pointer

May   29, 2002  M.Dressel internal-2-transport-V04-00-05
--------------------------------------------------------
- bug fix in G4PImportanceWWindowScoreManager.cc
  and G4ParallelImportanceManager.hh.

May   24, 2002  M.Dressel internal-1-transport-V04-00-05
-------------------------
- Change in G4VProcessPlacer and G4ProcessPlacer: add member function
  RemoveProcess to properly remove a process.
- Add classes for wieght window biasing.


May   02, 2002  M.Dressel 
-------------------------
- Change in G4ProcessPlacer: set process vector via process manager not 
  directly. 
- Change in G4ParallelTranport: use StartTracking to signal inital step.
  This should help to locate "suspended" tracks.

April 24, 2002  G.Cosmo - transport-V04-00-05