@@ -1,46 +1,0 @@
-//
-// ********************************************************************
-// * DISCLAIMER                                                       *
-// *                                                                  *
-// * The following disclaimer summarizes all the specific disclaimers *
-// * of contributors to this software. The specific disclaimers,which *
-// * govern, are listed with their locations in:                      *
-// *   http://cern.ch/geant4/license                                  *
-// *                                                                  *
-// * Neither the authors of this software system, nor their employing *
-// * institutes,nor the agencies providing financial support for this *
-// * work  make  any representation or  warranty, express or implied, *
-// * regarding  this  software system or assume any liability for its *
-// * use.                                                             *
-// *                                                                  *
-// * This  code  implementation is the  intellectual property  of the *
-// * GEANT4 collaboration.                                            *
-// * By copying,  distributing  or modifying the Program (or any work *
-// * based  on  the Program)  you indicate  your  acceptance of  this *
-// * statement, and all its terms.                                    *
-// ********************************************************************
-//
-//
-// $Id: G4VImportanceScoreConstructor.hh,v 1.2 2002-05-30 15:44:20 gcosmo Exp $
-// GEANT4 tag $Name: not supported by cvs2svn $
-//
-// ----------------------------------------------------------------------
-// Class G4VImportanceScoreConstructor
-//
-// Class description:
-//
-// 
-
-// Author: Michael Dressel (Michael.Dressel@cern.ch)
-// ----------------------------------------------------------------------
-#ifndef G4VImportanceScoreConstructor_hh
-#define G4VImportanceScoreConstructor_hh G4VImportanceScoreConstructor_hh
-
-class G4VImportanceScoreConstructor
-{
-public:
-  virtual ~G4VImportanceScoreConstructor(){}
-  virtual void Initialize() = 0;
-};
-
-#endif
