@@ -1,4 +1,4 @@
-$Id: History,v 1.34 2002-05-30 13:01:44 dressel Exp $
+$Id: History,v 1.35 2002-05-30 15:57:26 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+May   30, 2002  M.Dressel 
+--------------------------------------------------------
+- chamged G4VImportanceScoreConstructor to G4VSampler
 
 May   30, 2002  M.Dressel 
 --------------------------------------------------------
